...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            app:buttonLabel="@string/add_group"
            app:layout_constraintEnd_toStartOf="@+id/ctcibToggleSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomTextColorImageButton
            android:id="@+id/ctcibToggleSearch"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/search_group_hint"
            app:iconDrawable="@drawable/ic_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddGroup"
            app:layout_constraintEnd_toStartOf="@+id/ctcibActionsMenu"
            app:layout_constraintStart_toEndOf="@+id/btnAddGroup"
            app:layout_constraintTop_toTopOf="@+id/btnAddGroup" />

        <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomTextColorImageButton
            android:id="@+id/ctcibActionsMenu"
            android:layout_width="@dimen/icon_btn_size"
...
            app:layout_constraintBottom_toBottomOf="@+id/btnAddGroup"
            app:layout_constraintEnd_toStartOf="@+id/ctcibToggleSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnAddGroup">

            <com.milen.grounpringtonesetter.customviews.ui.texts.CustomInputView
                android:id="@+id/civGroupSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_group_hint" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.milen.grounpringtonesetter.customviews.ui.texts.CustomTextView
        android:id="@+id/no_item_disclaimer"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/items_not_found"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rwGroupItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rwGroupItems"
        tools:visibility="visible" />

    <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomRoundedButton
        android:id="@+id/btn_empty_add_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:visibility="gone"
...
